refactor:: atualização dos casos de teste.